--- a/PersonalInventoryManagement.PL/Accounting forms/ForgetPassword.resx
+++ b/PersonalInventoryManagement.PL/Accounting forms/ForgetPassword.resx
@@ -120,15 +120,14 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="pictureBox4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAF9SURBVEhL7ZQ7SwNBEIDjA1FECytB/0sQUWYi2uhVdsbO
-        zsYyrYV2tlZaxUZiZjHVtUmn4ON2RQJ2/gKJr5NZNzHZ87y7+IJwAx937OzMd3t3u5lMGmn0bNTLuUlF
-        eK4E+r+BJLyUJwtTHVJPwCxfL07nJ5SAql30faDKvdtdOpSAhhKwwvdnlblRSVgJFneHJHSvj5fGjGdR
-        Ej60idGXAp6VgDW98qIzJAmP7CZJkYSlupsdNtJVRfjE4x1iM/HVI9zkMb/oDEjCfbtZXCThgetmB7mX
-        R7ghBbw0cwFxW9G2lvuZPiVgx85HA3t+odBvVrpl50PFcYrDsB56184zEWLd5DDsddkk+UyRYtOwdFd0
-        RszK+Qd5DMxJ+GPGEuvGhK4SMG7kekt85KGhCJc5F3crxhZrCGvNQ+CmnJtRAm4Zvtcr5cOHsBao+4Rk
-        Yg1cKQHTrUITSY/bVqGd+ApJeK8E5PkBGI9w/X0sODeMrsQ/QSr+M/5fnEYaPRVvfxQhtieLW/wAAAAA
-        SUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DwAACw8BkvkDpQAAAX1JREFUSEvtlDtLA0EQgOMDUUQLK0H/SxBRZiLa6FV2xs7OxjKthXa2VlrFRmJm
+        MdW1Safg43ZFAnb+Aomvk1k3MdnzvLv4gnADH3fs7Mx3e3e7mUwaafRs1Mu5SUV4rgT6v4EkvJQnC1Md
+        Uk/ALF8vTucnlICqXfR9oMq92106lICGErDC92eVuVFJWAkWd4ckdK+Pl8aMZ1ESPrSJ0ZcCnpWANb3y
+        ojMkCY/sJkmRhKW6mx020lVF+MTjHWIz8dUj3OQxv+gMSMJ9u1lcJOGB62YHuZdHuCEFvDRzAXFb0baW
+        +5k+JWDHzkcDe36h0G9WumXnQ8VxisOwHnrXzjMRYt3kMOx12ST5TJFi07B0V3RGzMr5B3kMzEn4Y8YS
+        68aErhIwbuR6S3zkoaEIlzkXdyvGFmsIa81D4Kacm1ECbhm+1yvlw4ewFqj7hGRiDVwpAdOtQhNJj9tW
+        oZ34Ckl4rwTk+QEYj3D9fSw4N4yuxD9BKv4z/l+cRho9FW9/FCG2J4tb/AAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -417,6 +416,23 @@
         PQCA4Jy/PHdbq9WLjVb/arTaKxswRKzk141Wu41Wby/y5Cj5fQMAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
         GAT/H87XbwXy3QYaAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="button2.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DAAACwwBP0AiyAAAAEBJREFUSEtjYBgFo2AUDA/Az8DA4MjAwOBCZQwyE2Q2w2UGBob/NMJXQBZcwiJB
+        LQy2gI+GQQQyexSMglEw5AEAAIs7ABaRp2gAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="button3.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DAAACwwBP0AiyAAAANZJREFUSEvtllEKAjEMROcSit7/OPqlHx5HCWyghCYztbss6D4ILJrpa7stChz8
+        K2cA96XseRTP30byJwAPAO+lXgCusang67zN1ENeT3Hm1mO9MW8rp/TEijyTyuK4VW1l28YylxjIYAO1
+        ctYrSx02oMlZz7DUqd6bfV59V50HiWpVvZpaaUSVryp1mHwTqaGIe1dtCibdRK5KV5Xvcp2qlfpBYj3D
+        K2cDtqeX9cpyNlDvyrCMJN/tZ7EnZlInk0viuG3Z9mZM5W3mNsuhP2sNs/mDH+ADRnPvYx4DeaQAAAAA
+        SUVORK5CYII=
 </value>
   </data>
 </root>
