--- a/PersonalInventoryManagement.PL/Accounting forms/Registration.resx
+++ b/PersonalInventoryManagement.PL/Accounting forms/Registration.resx
@@ -408,128 +408,143 @@
   </data>
   <data name="pictureBox2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAEJSURBVEhL7ZIxTgJREIZJKLiCJlh7DhuYofcmXEHvwobE
-        GJnB6CG0WvKGwopOCUJBiZmFvMC/WfVtKPdL/mr/+Wbz3mu1Gs7B/Ll3FZTGprQ+5GE27V9jrxYuN+Ev
-        U94dJygt/Rv2k9n/+ak8LhHOsJ/M/kjK8sOCb+wn88eCFfaT8QtFcVygNMJ+Mv5a/EJRbsKfptTFfi2K
-        Zyqc+ZkXURqdTd5QyS67bc8ngxtTujfhV1PKTXhTRCkPSi+mdOcd7+J8JabUCUpDE16UXk5VhBfFjFIH
-        fSfk0/6lCb+XBP8OvX1MBhfojQSlp/JQWoLwI3ojQXiLA6lxB3ojWK4b9EawWDfobfiVH1Dk5IzKU4ec
-        AAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DwAACw8BkvkDpQAAAQlJREFUSEvtkjFOAlEQhkkouIImWHsOG5ih9yZcQe/ChsQYmcHoIbRa8obCik4J
+        QkGJmYW8wL9Z9W0o90v+av/5ZvPea7UazsH8uXcVlMamtD7kYTbtX2OvFi434S9T3h0nKC39G/aT2f/5
+        qTwuEc6wn8z+SMryw4Jv7Cfzx4IV9pPxC0VxXKA0wn4y/lr8QlFuwp+m1MV+LYpnKpz5mRdRGp1N3lDJ
+        LrttzyeDG1O6N+FXU8pNeFNEKQ9KL6Z05x3v4nwlptQJSkMTXpReTlWEF8WMUgd9J+TT/qUJv5cE/w69
+        fUwGF+iNBKWn8lBagvAjeiNBeIsDqXEHeiNYrhv0RrBYN+ht+JUfUOTkjMpTh5wAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="pictureBox3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAFlSURBVEhL7ZKxL0NRFIfNwirEJuwkYtRJe24rdhaR2KyS
-        jvxJou/e1mRAYmAT7bkqLBZGCwtSEtrvPEt7Y9Ev+ZKXvPO93/JGRob8O7RRXIpBTmOQ2yR6d9L0bpE7
-        hhhEY3DvSfWuyR2DiRLJHQODVHLHwCCV3DEwMHr33PJu+y4rT2qtMq1Baurdm7lLPdzyboeNBtnlHWVj
-        YECv66UpNu2jlQneUTYGBrR5sDbO5uq4MMY7ysbAgLZrlTk2N43iLO8oGwMDqll53jaywDvKxsCAapAz
-        28g57ygbA4M8tV5a/773boPv8+xdyYFBvlL9uZeqfW/tXcmBQbfq3aV6t9/9Z3eeY5A9DXLB+4GHNch9
-        5wfiLencfN3ab/DWwOBzOCsv8+43YpAC+76HU8gdA4NUcsfAIJXcMcQgT4wGVb175I4hercVg7wy7lf1
-        7kWDbHInl4fD1VHNKjMp7HyL3x/yp3wA8tbkpnXJxf4AAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DwAACw8BkvkDpQAAAWVJREFUSEvtkrEvQ1EUh83CKsQm7CRi1El7bit2FpHYrJKO/Emi797WZEBiYBPt
+        uSosFkYLC1IS2u88S3tj0S/5kpe8873f8kZGhvw7tFFcikFOY5DbJHp30vRukTuGGERjcO9J9a7JHYOJ
+        EskdA4NUcsfAIJXcMTAwevfc8m77LitPaq0yrUFq6t2buUs93PJuh40G2eUdZWNgQK/rpSk27aOVCd5R
+        NgYGtHmwNs7m6rgwxjvKxsCAtmuVOTY3jeIs7ygbAwOqWXneNrLAO8rGwIBqkDPbyDnvKBsDgzy1Xlr/
+        vvdug+/z7F3JgUG+Uv25l6p9b+1dyYFBt+rdpXq33/1nd55jkD0NcsH7gYc1yH3nB+It6dx83dpv8NbA
+        4HM4Ky/z7jdikAL7vodTyB0Dg1Ryx8AgldwxxCBPjAZVvXvkjiF6txWDvDLuV/XuRYNscieXh8PVUc0q
+        MynsfIvfH/KnfADy1uSmdcnF/gAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="pictureBox4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAF9SURBVEhL7ZQ7SwNBEIDjA1FECytB/0sQUWYi2uhVdsbO
-        zsYyrYV2tlZaxUZiZjHVtUmn4ON2RQJ2/gKJr5NZNzHZ87y7+IJwAx937OzMd3t3u5lMGmn0bNTLuUlF
-        eK4E+r+BJLyUJwtTHVJPwCxfL07nJ5SAql30faDKvdtdOpSAhhKwwvdnlblRSVgJFneHJHSvj5fGjGdR
-        Ej60idGXAp6VgDW98qIzJAmP7CZJkYSlupsdNtJVRfjE4x1iM/HVI9zkMb/oDEjCfbtZXCThgetmB7mX
-        R7ghBbw0cwFxW9G2lvuZPiVgx85HA3t+odBvVrpl50PFcYrDsB56184zEWLd5DDsddkk+UyRYtOwdFd0
-        RszK+Qd5DMxJ+GPGEuvGhK4SMG7kekt85KGhCJc5F3crxhZrCGvNQ+CmnJtRAm4Zvtcr5cOHsBao+4Rk
-        Yg1cKQHTrUITSY/bVqGd+ApJeK8E5PkBGI9w/X0sODeMrsQ/QSr+M/5fnEYaPRVvfxQhtieLW/wAAAAA
-        SUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DwAACw8BkvkDpQAAAX1JREFUSEvtlDtLA0EQgOMDUUQLK0H/SxBRZiLa6FV2xs7OxjKthXa2VlrFRmJm
+        MdW1Safg43ZFAnb+Aomvk1k3MdnzvLv4gnADH3fs7Mx3e3e7mUwaafRs1Mu5SUV4rgT6v4EkvJQnC1Md
+        Uk/ALF8vTucnlICqXfR9oMq92106lICGErDC92eVuVFJWAkWd4ckdK+Pl8aMZ1ESPrSJ0ZcCnpWANb3y
+        ojMkCY/sJkmRhKW6mx020lVF+MTjHWIz8dUj3OQxv+gMSMJ9u1lcJOGB62YHuZdHuCEFvDRzAXFb0baW
+        +5k+JWDHzkcDe36h0G9WumXnQ8VxisOwHnrXzjMRYt3kMOx12ST5TJFi07B0V3RGzMr5B3kMzEn4Y8YS
+        68aErhIwbuR6S3zkoaEIlzkXdyvGFmsIa81D4Kacm1ECbhm+1yvlw4ewFqj7hGRiDVwpAdOtQhNJj9tW
+        oZ34Ckl4rwTk+QEYj3D9fSw4N4yuxD9BKv4z/l+cRho9FW9/FCG2J4tb/AAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="pictureBox5.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAEmSURBVEhL1ZRNSsRAEIVnpwu9gV5ElNmZqgyIF/HnaC6m
-        O+5mO7pSEUxXEEFvoO6VytASXg10akDEDx6kU/VedX7oyeSveVlMtyXwhQS+kcCfvSItU1OdS6Qt7HfR
-        XR/vS6QHify1VoHvJNIe+kbR7zyHB75PTTV7XEx3VHo9qOkQ/5NIpMscrqFYf7o62ZVIz9qTIp1hvYgE
-        vu3NTTXDWqYNfLp6XbTEWhEJ/KHmdbvPrJ6iH/COtSL5Q+J9ZGzfDylSnQK/mT+mIPW0gRnzDJuED4a8
-        Yp4BTV5hngENXmGeAQ1eYZ4BDV5hnmHY3M3rgzbS4di1e4CaU1MdjV27B2wizDOgwSvMM6DBK8wzoMEr
-        zDP8+lGhB5Y2orkk9XTzmjDv//MN5FX2k0iRjZcAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DwAACw8BkvkDpQAAASZJREFUSEvVlE1KxEAQhWenC72BXkSU2ZmqDIgX8edoLqY77mY7ulIRTFcQQW+g
+        7pXK0BJeDXRqQMQPHqRT9V51fujJ5K95WUy3JfCFBL6RwJ+9Ii1TU51LpC3sd9FdH+9LpAeJ/LVWge8k
+        0h76RtHvPIcHvk9NNXtcTHdUej2o6RD/k0ikyxyuoVh/ujrZlUjP2pMinWG9iAS+7c1NNcNapg18unpd
+        tMRaEQn8oeZ1u8+snqIf8I61IvlD4n1kbN8PKVKdAr+ZP6Yg9bSBGfMMm4QPhrxingFNXmGeAQ1eYZ4B
+        DV5hngENXmGeYdjczeuDNtLh2LV7gJpTUx2NXbsHbCLMM6DBK8wzoMErzDOgwSvMM/z6UaEHljaiuST1
+        dPOaMO//8w3kVfaTSJGNlwAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="pictureBox6.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAEmSURBVEhL1ZRNSsRAEIVnpwu9gV5ElNmZqgyIF/HnaC6m
-        O+5mO7pSEUxXEEFvoO6VytASXg10akDEDx6kU/VedX7oyeSveVlMtyXwhQS+kcCfvSItU1OdS6Qt7HfR
-        XR/vS6QHify1VoHvJNIe+kbR7zyHB75PTTV7XEx3VHo9qOkQ/5NIpMscrqFYf7o62ZVIz9qTIp1hvYgE
-        vu3NTTXDWqYNfLp6XbTEWhEJ/KHmdbvPrJ6iH/COtSL5Q+J9ZGzfDylSnQK/mT+mIPW0gRnzDJuED4a8
-        Yp4BTV5hngENXmGeAQ1eYZ4BDV5hnmHY3M3rgzbS4di1e4CaU1MdjV27B2wizDOgwSvMM6DBK8wzoMEr
-        zDP8+lGhB5Y2orkk9XTzmjDv//MN5FX2k0iRjZcAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DwAACw8BkvkDpQAAASZJREFUSEvVlE1KxEAQhWenC72BXkSU2ZmqDIgX8edoLqY77mY7ulIRTFcQQW+g
+        7pXK0BJeDXRqQMQPHqRT9V51fujJ5K95WUy3JfCFBL6RwJ+9Ii1TU51LpC3sd9FdH+9LpAeJ/LVWge8k
+        0h76RtHvPIcHvk9NNXtcTHdUej2o6RD/k0ikyxyuoVh/ujrZlUjP2pMinWG9iAS+7c1NNcNapg18unpd
+        tMRaEQn8oeZ1u8+snqIf8I61IvlD4n1kbN8PKVKdAr+ZP6Yg9bSBGfMMm4QPhrxingFNXmGeAQ1eYZ4B
+        DV5hngENXmGeYdjczeuDNtLh2LV7gJpTUx2NXbsHbCLMM6DBK8wzoMErzDOgwSvMM/z6UaEHljaiuST1
+        dPOaMO//8w3kVfaTSJGNlwAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="pictureBox7.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAJdSURBVEhL7VZLaxNRFI4LLeJ7pT9AXFofXasLTc5Jta6C
-        i27FP9HqwhatIKL0RygposKck4iCIN01QoRic28oRUH7cClSV4mcOzN658xMnXZhN/nggzD3e3Dv3Hsn
-        pdIAA+w2lghHLMGUJXxrGFYN4aYjw2r07G63UTmnfTtGt1EZM4QfLGO/GGHBEl7VOYXxifCUYWikgwuS
-        MOg2yyd17pboEN4wDD91mCFcNwwTJqieab++ckBoGc6aoDIpY1pvCX90G1DT+Sn0+6U9luGeIezpEENY
-        X3o5dkh7YsiYIZzL8PUs4bRka49DVDqrjXFprtGDaLLKHQmfZGZYhocpcbS8W81UwzIcNoQbOsdlMTxI
-        iA3DLS3yxBO+drFe2ycBlvCbJfxqCGfkma+xhLd1TswO4U0nMs3ysCH8pQV/ipvlYT9UilIawhlfIxtO
-        azztZofhtMy2pQd96mWWWWqNPPM14klp/HKGlgS19YDPnRTLe05pkvq23EyXso5PTDmzfmjOUt/3Nf9Y
-        6p4JqhfCMIbHWvC3uDLph7rNJeUy87zNxXBH53jFjxJhlmFeiyLhto7T8pvLRyzDd53jSPi+1Tq/N2H4
-        HIwes4QfU+KwfC7z8Cu4S4jwufZHpe2VF9ePao/DSlA94b4u2hSVy6bRnhhupnmlDAvLr64d154EvtRr
-        +y3Ds7TZlW/I5SDf3cV3Fw8K5Xf4TnOX96lk6p5MRPf2eObRKUrnhfEirygFdxEQTufOJoPhqsDUdjZk
-        LizDkGlURsOvF8wbhjXvr89aeCJgNtIMaf8AA/xX/AZXkN/PGIMFZAAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DwAACw8BkvkDpQAAAl1JREFUSEvtVktrE1EUjgst4nulP0BcWh9dqwtNzkm1roKLbsU/0erCFq0govRH
+        KCmiwpyTiIIg3TVChGJzbyhFQftwKVJXiZw7M3rnzEyddmE3+eCDMPd7cO/ceyel0gAD7DaWCEcswZQl
+        fGsYVg3hpiPDavTsbrdROad9O0a3URkzhB8sY78YYcESXtU5hfGJ8JRhaKSDC5Iw6DbLJ3XulugQ3jAM
+        P3WYIVw3DBMmqJ5pv75yQGgZzpqgMiljWm8Jf3QbUNP5KfT7pT2W4Z4h7OkQQ1hfejl2SHtiyJghnMvw
+        9SzhtGRrj0NUOquNcWmu0YNossodCZ9kZliGhylxtLxbzVTDMhw2hBs6x2UxPEiIDcMtLfLEE752sV7b
+        JwGW8Jsl/GoIZ+SZr7GEt3VOzA7hTScyzfKwIfylBX+Km+VhP1SKUhrCGV8jG05rPO1mh+G0zLalB33q
+        ZZZZao088zXiSWn8coaWBLX1gM+dFMt7TmmS+rbcTJeyjk9MObN+aM5S3/c1/1jqngmqF8Iwhsda8Le4
+        MumHus0l5TLzvM3FcEfneMWPEmGWYV6LIuG2jtPym8tHLMN3neNI+L7VOr83YfgcjB6zhB9T4rB8LvPw
+        K7hLiPC59kel7ZUX149qj8NKUD3hvi7aFJXLptGeGG6meaUMC8uvrh3XngS+1Gv7LcOztNmVb8jlIN/d
+        xXcXDwrld/hOc5f3qWTqnkxE9/Z45tEpSueF8SKvKAV3ERBO584mg+GqwNR2NmQuLMOQaVRGw68XzBuG
+        Ne+vz1p4ImA20gxp/wAD/Ff8BleQ388YgwVkAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="pictureBox8.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAALHSURBVEhL5ZfPa9RQEMfjQcWfIKgo6k3wpFj7B1SQbma6
-        i7ci4k0EsX+DFZGCiB4U/wVB7R6UujNpQfDiRV2hanH3zRZFsagVBRWtF61MNlmT2Wxai62HfmEg7Js3
-        n2TezCTreZ7nCcOpybHerXq9ZBKGAWGcdQzPlhQuDFuE4anChbD2PPC3W59F0/KF6xnrWWedeZ1hnyM8
-        6wjHhOGNY/juCGccw1shvOsYzjUC/0A64l/Iwl3gHxXCh2Em5mXwSAhLNu68lIQv2AgrjdHCbht7TmXB
-        HeF7IRzUtE+NlNaOj/WuE4YuV/FPh2vt8K+NAPpt7EzpOQrDcb1OpZ3wRy3w91j/WLXbhzc4wrKFO8Jf
-        Qjg0O+utsHtC6YJjuBw6M/zMhM8xZMIYGfDo6a9kwh3h+dSddoITTmhwx/BJGL4Iw61kJoRhoyOcbgM3
-        Y15IQeuEJ6xTDK8zHLJwa3oTjdHCrhaccND6xKas0KlGuFf70Tq0glb69scBc+GEwy0wQ5ddT/jNaHF6
-        jqFqF5OmlRsHzIM7ws+xjxaaXU/5MlQ1LeN2IWkaJA6ow6QjnPBj7Ndss/ZYCd8nXiPwD4YlbxcjS6Za
-        GG64wD+ZBXcMN2M/3WPjJPy0aHuajlEbZZkOhwR4p1ZsFjzZasJwxsb5Y3ApjudNDPevEob77U7NaZVK
-        953iDiG8Xic8kgXX1sppp6Ba7V7ZAqteVYqbNPfWOYKXM5s/kp1wdn/0++OJez3r7d5QLyt928K3S/bG
-        sg4HuyeWPfOUET6oj5Q22z0pvR7uX6NF1La5CZ/W4aDvXb17rd7JSrE7b8g4wmu2JTtK0yoMx4RwysKz
-        rON4ZXiXN9s7KhwEhEPC8MHCrOXAc18suRKG1S7wi8JwVatfnyT67PkmhC/CjiC8KAyFeM8/gy9E//UD
-        cvnC060GA3Z9UaVw/YOo178B5A2bTDNUmI0AAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DwAACw8BkvkDpQAAAsdJREFUSEvll89r1FAQx+NBxZ8gqCjqTfCkWPsHVJBuZrqLtyLiTQSxf4MVkYKI
+        HhT/BUHtHpS6M2lB8OJFXaFqcffNFkWxqBUFFa0XrUw2WZPZbFqLrYd+YSDsmzefZN7MJOt5nucJw6nJ
+        sd6ter1kEoYBYZx1DM+WFC4MW4ThqcKFsPY88Ldbn0XT8oXrGetZZ515nWGfIzzrCMeE4Y1j+O4IZxzD
+        WyG86xjONQL/QDriX8jCXeAfFcKHYSbmZfBICEs27ryUhC/YCCuN0cJuG3tOZcEd4XshHNS0T42U1o6P
+        9a4Thi5X8U+Ha+3wr40A+m3sTOk5CsNxvU6lnfBHLfD3WP9YtduHNzjCsoU7wl9CODQ7662we0LpgmO4
+        HDoz/MyEzzFkwhgZ8Ojpr2TCHeH51J12ghNOaHDH8EkYvgjDrWQmhGGjI5xuAzdjXkhB64QnrFMMrzMc
+        snBrehON0cKuFpxw0PrEpqzQqUa4V/vROrSCVvr2xwFz4YTDLTBDl11P+M1ocXqOoWoXk6aVGwfMgzvC
+        z7GPFppdT/kyVDUt43YhaRokDqjDpCOc8GPs12yz9lgJ3ydeI/APhiVvFyNLploYbrjAP5kFdww3Yz/d
+        Y+Mk/LRoe5qOURtlmQ6HBHinVmwWPNlqwnDGxvljcCmO500M968ShvvtTs1plUr3neIOIbxeJzySBdfW
+        ymmnoFrtXtkCq15Vips099Y5gpczmz+SnXB2f/T744l7Pevt3lAvK33bwrdL9sayDge7J5Y985QRPqiP
+        lDbbPSm9Hu5fo0XUtrkJn9bhoO9dvXut3slKsTtvyDjCa7YlO0rTKgzHhHDKwrOs43hleJc32zsqHASE
+        Q8LwwcKs5cBzXyy5EobVLvCLwnBVq1+fJPrs+SaEL8KOILwoDIV4zz+DL0T/9QNy+cLTrQYDdn1RpXD9
+        g6jXvwHkDZtMM1SYjQAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="pictureBox9.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAALHSURBVEhL5ZfPa9RQEMfjQcWfIKgo6k3wpFj7B1SQbma6
-        i7ci4k0EsX+DFZGCiB4U/wVB7R6UujNpQfDiRV2hanH3zRZFsagVBRWtF61MNlmT2Wxai62HfmEg7Js3
-        n2TezCTreZ7nCcOpybHerXq9ZBKGAWGcdQzPlhQuDFuE4anChbD2PPC3W59F0/KF6xnrWWedeZ1hnyM8
-        6wjHhOGNY/juCGccw1shvOsYzjUC/0A64l/Iwl3gHxXCh2Em5mXwSAhLNu68lIQv2AgrjdHCbht7TmXB
-        HeF7IRzUtE+NlNaOj/WuE4YuV/FPh2vt8K+NAPpt7EzpOQrDcb1OpZ3wRy3w91j/WLXbhzc4wrKFO8Jf
-        Qjg0O+utsHtC6YJjuBw6M/zMhM8xZMIYGfDo6a9kwh3h+dSddoITTmhwx/BJGL4Iw61kJoRhoyOcbgM3
-        Y15IQeuEJ6xTDK8zHLJwa3oTjdHCrhaccND6xKas0KlGuFf70Tq0glb69scBc+GEwy0wQ5ddT/jNaHF6
-        jqFqF5OmlRsHzIM7ws+xjxaaXU/5MlQ1LeN2IWkaJA6ow6QjnPBj7Ndss/ZYCd8nXiPwD4YlbxcjS6Za
-        GG64wD+ZBXcMN2M/3WPjJPy0aHuajlEbZZkOhwR4p1ZsFjzZasJwxsb5Y3ApjudNDPevEob77U7NaZVK
-        953iDiG8Xic8kgXX1sppp6Ba7V7ZAqteVYqbNPfWOYKXM5s/kp1wdn/0++OJez3r7d5QLyt928K3S/bG
-        sg4HuyeWPfOUET6oj5Q22z0pvR7uX6NF1La5CZ/W4aDvXb17rd7JSrE7b8g4wmu2JTtK0yoMx4RwysKz
-        rON4ZXiXN9s7KhwEhEPC8MHCrOXAc18suRKG1S7wi8JwVatfnyT67PkmhC/CjiC8KAyFeM8/gy9E//UD
-        cvnC060GA3Z9UaVw/YOo178B5A2bTDNUmI0AAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DwAACw8BkvkDpQAAAsdJREFUSEvll89r1FAQx+NBxZ8gqCjqTfCkWPsHVJBuZrqLtyLiTQSxf4MVkYKI
+        HhT/BUHtHpS6M2lB8OJFXaFqcffNFkWxqBUFFa0XrUw2WZPZbFqLrYd+YSDsmzefZN7MJOt5nucJw6nJ
+        sd6ter1kEoYBYZx1DM+WFC4MW4ThqcKFsPY88Ldbn0XT8oXrGetZZ515nWGfIzzrCMeE4Y1j+O4IZxzD
+        WyG86xjONQL/QDriX8jCXeAfFcKHYSbmZfBICEs27ryUhC/YCCuN0cJuG3tOZcEd4XshHNS0T42U1o6P
+        9a4Thi5X8U+Ha+3wr40A+m3sTOk5CsNxvU6lnfBHLfD3WP9YtduHNzjCsoU7wl9CODQ7662we0LpgmO4
+        HDoz/MyEzzFkwhgZ8Ojpr2TCHeH51J12ghNOaHDH8EkYvgjDrWQmhGGjI5xuAzdjXkhB64QnrFMMrzMc
+        snBrehON0cKuFpxw0PrEpqzQqUa4V/vROrSCVvr2xwFz4YTDLTBDl11P+M1ocXqOoWoXk6aVGwfMgzvC
+        z7GPFppdT/kyVDUt43YhaRokDqjDpCOc8GPs12yz9lgJ3ydeI/APhiVvFyNLploYbrjAP5kFdww3Yz/d
+        Y+Mk/LRoe5qOURtlmQ6HBHinVmwWPNlqwnDGxvljcCmO500M968ShvvtTs1plUr3neIOIbxeJzySBdfW
+        ymmnoFrtXtkCq15Vips099Y5gpczmz+SnXB2f/T744l7Pevt3lAvK33bwrdL9sayDge7J5Y985QRPqiP
+        lDbbPSm9Hu5fo0XUtrkJn9bhoO9dvXut3slKsTtvyDjCa7YlO0rTKgzHhHDKwrOs43hleJc32zsqHASE
+        Q8LwwcKs5cBzXyy5EobVLvCLwnBVq1+fJPrs+SaEL8KOILwoDIV4zz+DL0T/9QNy+cLTrQYDdn1RpXD9
+        g6jXvwHkDZtMM1SYjQAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="pictureBox10.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAJdSURBVEhL7VZLaxNRFI4LLeJ7pT9AXFofXasLTc5Jta6C
-        i27FP9HqwhatIKL0RygposKck4iCIN01QoRic28oRUH7cClSV4mcOzN658xMnXZhN/nggzD3e3Dv3Hsn
-        pdIAA+w2lghHLMGUJXxrGFYN4aYjw2r07G63UTmnfTtGt1EZM4QfLGO/GGHBEl7VOYXxifCUYWikgwuS
-        MOg2yyd17pboEN4wDD91mCFcNwwTJqieab++ckBoGc6aoDIpY1pvCX90G1DT+Sn0+6U9luGeIezpEENY
-        X3o5dkh7YsiYIZzL8PUs4bRka49DVDqrjXFprtGDaLLKHQmfZGZYhocpcbS8W81UwzIcNoQbOsdlMTxI
-        iA3DLS3yxBO+drFe2ycBlvCbJfxqCGfkma+xhLd1TswO4U0nMs3ysCH8pQV/ipvlYT9UilIawhlfIxtO
-        azztZofhtMy2pQd96mWWWWqNPPM14klp/HKGlgS19YDPnRTLe05pkvq23EyXso5PTDmzfmjOUt/3Nf9Y
-        6p4JqhfCMIbHWvC3uDLph7rNJeUy87zNxXBH53jFjxJhlmFeiyLhto7T8pvLRyzDd53jSPi+1Tq/N2H4
-        HIwes4QfU+KwfC7z8Cu4S4jwufZHpe2VF9ePao/DSlA94b4u2hSVy6bRnhhupnmlDAvLr64d154EvtRr
-        +y3Ds7TZlW/I5SDf3cV3Fw8K5Xf4TnOX96lk6p5MRPf2eObRKUrnhfEirygFdxEQTufOJoPhqsDUdjZk
-        LizDkGlURsOvF8wbhjXvr89aeCJgNtIMaf8AA/xX/AZXkN/PGIMFZAAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DwAACw8BkvkDpQAAAl1JREFUSEvtVktrE1EUjgst4nulP0BcWh9dqwtNzkm1roKLbsU/0erCFq0govRH
+        KCmiwpyTiIIg3TVChGJzbyhFQftwKVJXiZw7M3rnzEyddmE3+eCDMPd7cO/ceyel0gAD7DaWCEcswZQl
+        fGsYVg3hpiPDavTsbrdROad9O0a3URkzhB8sY78YYcESXtU5hfGJ8JRhaKSDC5Iw6DbLJ3XulugQ3jAM
+        P3WYIVw3DBMmqJ5pv75yQGgZzpqgMiljWm8Jf3QbUNP5KfT7pT2W4Z4h7OkQQ1hfejl2SHtiyJghnMvw
+        9SzhtGRrj0NUOquNcWmu0YNossodCZ9kZliGhylxtLxbzVTDMhw2hBs6x2UxPEiIDcMtLfLEE752sV7b
+        JwGW8Jsl/GoIZ+SZr7GEt3VOzA7hTScyzfKwIfylBX+Km+VhP1SKUhrCGV8jG05rPO1mh+G0zLalB33q
+        ZZZZao088zXiSWn8coaWBLX1gM+dFMt7TmmS+rbcTJeyjk9MObN+aM5S3/c1/1jqngmqF8Iwhsda8Le4
+        MumHus0l5TLzvM3FcEfneMWPEmGWYV6LIuG2jtPym8tHLMN3neNI+L7VOr83YfgcjB6zhB9T4rB8LvPw
+        K7hLiPC59kel7ZUX149qj8NKUD3hvi7aFJXLptGeGG6meaUMC8uvrh3XngS+1Gv7LcOztNmVb8jlIN/d
+        xXcXDwrld/hOc5f3qWTqnkxE9/Z45tEpSueF8SKvKAV3ERBO584mg+GqwNR2NmQuLMOQaVRGw68XzBuG
+        Ne+vz1p4ImA20gxp/wAD/Ff8BleQ388YgwVkAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="button2.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DAAACwwBP0AiyAAAAEBJREFUSEtjYBgFo2AUDA/Az8DA4MjAwOBCZQwyE2Q2w2UGBob/NMJXQBZcwiJB
+        LQy2gI+GQQQyexSMglEw5AEAAIs7ABaRp2gAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="button3.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DAAACwwBP0AiyAAAANZJREFUSEvtllEKAjEMROcSit7/OPqlHx5HCWyghCYztbss6D4ILJrpa7stChz8
+        K2cA96XseRTP30byJwAPAO+lXgCusang67zN1ENeT3Hm1mO9MW8rp/TEijyTyuK4VW1l28YylxjIYAO1
+        ctYrSx02oMlZz7DUqd6bfV59V50HiWpVvZpaaUSVryp1mHwTqaGIe1dtCibdRK5KV5Xvcp2qlfpBYj3D
+        K2cDtqeX9cpyNlDvyrCMJN/tZ7EnZlInk0viuG3Z9mZM5W3mNsuhP2sNs/mDH+ADRnPvYx4DeaQAAAAA
+        SUVORK5CYII=
 </value>
   </data>
 </root>
